--- a/flutter_frontend/flutter_application/pubspec.yaml
+++ b/flutter_frontend/flutter_application/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   # webview_flutter: ^3.0.2
   esewa_pnp: ^2.0.0  
   khalti_flutter: ^2.0.2
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  webview_flutter: ^3.0.2
 
 dev_dependencies:
   flutter_test:
